<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_poster">Title poster</string>
    <string name="search">Search</string>
    <string name="romantic_comedy">Romantic Comedy</string>
    <string name="back_button">Back button</string>
    <string name="search_button">Search Button</string>
    <string name="oops_we_haven_t_got_that">Oops. We haven\'t got that</string>
    <string name="try_searching_for_other_movies_and_tv_shows">Try searching for other movies and tv shows</string>

    <string name="json_file_with_page_number">CONTENTLISTINGPAGE-PAGE%1$d.json</string>
</resources>
